# DXT_trace

./: Readme.md  dxt_to_perfect.py  env.sh  pyproject.toml
darshan_tools/: parser.py  perfetto.py
src/darshan_tools/: dxt_to_perfetto.py  parser.py
src/tests/: example_summary.txt  test_parser.py
tests/: example_trace.txt  test_parser.py  test_perfetto.py
